fixed overflow layout issue

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,9 +21,13 @@ $fonts: (
 
 html {
   font-size: 100%;
-  scroll-behavior: smooth;
   overflow-x: hidden;
+  scroll-behavior: smooth;
   font-family: 'WorkSans', sans-serif;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
